<resources>
    <string name="app_name">Recipes App</string>
    <string name="button_addRecipe">Add Recipe</string>
    <string name="hint_recipeTitle">Recipe Title</string>
    <string name="hint_recipeDescription">Description </string>
    <string name="menu_addRecipe">Add</string>
    <string name="menu_cancelRecipe">Cancel</string>
    <string name="enter_recipe_title"> Please enter a Recipe Title </string>
    <string name="save_recipe"> Save Recipe </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_recipe_image">Select recipe image</string>
    <string name="change_recipe_image">Change recipe image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="delete_recipe"> Delete Recipe </string>
    <string name="title_activity_recipe_maps">Map of All Recipes </string>
    <string name="recipe_image_placeholder">Recipe Imagee</string>
    <string name="recipe_title_placeholder">Recipe Title</string>
    <string name="recipe_description_placeholder">Recipe Description</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="sign_register_in">Sign in or register</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Incorrect Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="email_taken">"This email is already in use"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="action_recipeList">Recipe List</string>
    <string name="action_recipe">New recipe</string>
    <string name="recipeDetail">Donation Details</string>

    <string name="nav_header_title">Recipe App</string>
    <string name="nav_header_subtitle">recipeapp@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="about_title">Homer for President !!</string>
    <string name="about_message">Hi, I\'m Homer\n\nPlease vote for me.\n\n Please Please Please Please!!</string>

    <string name="recipesNotFound">No recipe Yet...\nAdd a recipe!</string>
    messageLoading
    <string name="messageLoading">Loading!</string>

    <string name="recipeError">Error!</string>

    <string name="auth_failed">login failed!</string>


    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string-array name="meals">
        <item>Breakast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string name="deleteRecipe">Delete Recipe</string>
    <string name="select_profile_image">Select Profile Image</string>

</resources>