<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/recipeFragment"
            android:title="@string/action_recipe" />
        <item
            android:id="@+id/recipeListFragment"
            android:title="@string/action_recipeList" />
    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/action_send" />
        </menu>
    </item>
</menu>