<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="recipevm"
            type="org.wit.recipesapp.ui.details.DetailViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/editTitle"
                android:layout_width="413dp"
                android:layout_height="43dp"
                android:layout_margin="8dp"
                android:hint="@string/hint_recipeTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@={recipevm.observableRecipe.Title}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/editDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.896" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="409dp"
                android:layout_height="43dp"
                android:layout_margin="8dp"
                android:hint="@string/hint_recipeDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:text="@={recipevm.observableRecipe.Description}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/recipeImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.552"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.412" />


            <Button
                android:id="@+id/chooseImage"
                android:layout_width="413dp"
                android:layout_height="46dp"
                android:layout_margin="16dp"
                android:layout_marginBottom="76dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/recipeImage"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDescription" />

            <ImageView
                android:id="@+id/recipeImage"
                android:layout_width="334dp"
                android:layout_height="249dp"
                android:layout_marginBottom="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.467"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />


            <Button
                android:id="@+id/editRecipeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save_recipe"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteRecipeButton"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/deleteRecipeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/deleteRecipe"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editRecipeButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</layout>