<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.recipesapp.ui.recipe.RecipeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/recipeTitle"
                android:layout_width="345dp"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:hint="@string/hint_recipeTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.558"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

            <EditText
                android:id="@+id/description"
                android:layout_width="344dp"
                android:layout_height="36dp"
                android:layout_margin="8dp"
                android:hint="@string/hint_recipeDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/recipeImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.552"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.412" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="153dp"
                android:layout_height="47dp"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/recipeLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintVertical_bias="0.283" />

            <ImageView
                android:id="@+id/recipeImage"
                android:layout_width="334dp"
                android:layout_height="249dp"
                android:layout_marginBottom="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/recipeLocation"
                android:layout_width="188dp"
                android:layout_height="49dp"
                android:layout_margin="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="48dp"
                android:background="@color/red"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:rotationX="4"
                android:stateListAnimator="@null"
                android:text="@string/button_location"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/recipeImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnAdd"
                app:layout_constraintTop_toBottomOf="@+id/chooseImage"
                app:layout_constraintVertical_bias="0.109" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="163dp"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:layout_marginBottom="72dp"
                android:background="@color/red"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_addRecipe"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/recipeImage"
                app:layout_constraintEnd_toStartOf="@+id/recipeLocation"
                app:layout_constraintHorizontal_bias="0.363"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintVertical_bias="0.858" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="237dp"
                android:layout_height="58dp"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/delete_recipe"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/recipeImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>